<resources>
    <string name="app_name">Click</string>
    <string name="start_activity">Login</string>
    <string name="second_activity">Sign up</string>
    <string name="start_hint_login">Email</string>
    <string name="start_hint_password">Password</string>
    <string name="start_hint_username">Username</string>
    <string name="help_text">New to here?</string>
    <string name="link_text">Sign up</string>
    <string name="butten_text_logout">Logout</string>
    <string name="chat">Chats</string>
    <string name="new_chat">New chat</string>
    <string name="profile">Profile</string>
    <string name="typing">Type your message...</string>
    <string name="setting">Settings</string>
    <string name="edit_username">edit nickname</string>
    <string name="change_theme">change theme</string>
    <string name="light_theme">light theme</string>
    <string name="dark_theme">dark theme</string>
    <string name="add">Add</string>
    <string name="search">search user</string>
</resources>