<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="84dp"
        android:layout_marginStart="100dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/start_activity"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="293dp"
        android:layout_height="50sp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="40dp"
        android:hint="@string/start_hint_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title" />


    <EditText
        android:id="@+id/password_et"
        android:layout_width="293dp"
        android:layout_height="50sp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="60dp"
        android:hint="@string/start_hint_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_et" />


    <Button
        android:id="@+id/login_btn"
        android:layout_width="293dp"
        android:layout_height="50sp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="180dp"
        android:backgroundTint="@color/main_color"
        android:text="@string/start_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_et" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn">


        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@color/white"
            android:text="@string/help_text"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="669dp" />

        <TextView
            android:id="@+id/go_to_register_activity_tv"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="7dp"
            android:background="@color/white"
            android:text="@string/link_text"
            android:textColor="@color/main_color"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="669dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>